Merge 0.6.0 into main to start 0.7.0 (#55)
* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft

* Draft